[gd_scene load_steps=17 format=3 uid="uid://do7kukic5tboh"]

[ext_resource type="Script" path="res://Scripts/level_menu.gd" id="1_jcs2g"]
[ext_resource type="Texture2D" uid="uid://bjtgcktgjqi57" path="res://Assets/mainMenu images/level.png" id="1_vit5l"]
[ext_resource type="FontFile" uid="uid://c4vdmmfb21ygp" path="res://gomarice_game_continue_02.ttf" id="2_o6aet"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lukmm"]
bg_color = Color(0.00392157, 0.254902, 0.478431, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_16s44"]
bg_color = Color(0.00208156, 0.156484, 0.35583, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2xtk5"]
bg_color = Color(0.00392157, 0.156863, 0.356863, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xkomv"]
bg_color = Color(0.00392157, 0.254902, 0.478431, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3njaw"]
bg_color = Color(0.00392157, 0.156863, 0.356863, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ofns1"]
bg_color = Color(0.00392157, 0.156863, 0.356863, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m62pf"]
bg_color = Color(0.00392157, 0.254902, 0.478431, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7iabl"]
bg_color = Color(0.00392157, 0.156863, 0.356863, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iytyf"]
bg_color = Color(0.00392157, 0.156863, 0.356863, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_opyis"]
bg_color = Color(0.00392157, 0.254902, 0.478431, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y60td"]
bg_color = Color(0.00392157, 0.254902, 0.478431, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_je7dj"]
bg_color = Color(0.00392157, 0.156863, 0.356863, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4st87"]
bg_color = Color(0.00392157, 0.156863, 0.356863, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="LevelMenu" type="Node2D"]
script = ExtResource("1_jcs2g")

[node name="Level" type="Sprite2D" parent="."]
position = Vector2(965, 495.5)
scale = Vector2(1.88086, 0.969727)
texture = ExtResource("1_vit5l")

[node name="Level1" type="Button" parent="."]
offset_left = 69.0
offset_top = 166.0
offset_right = 373.0
offset_bottom = 282.0
theme_override_fonts/font = ExtResource("2_o6aet")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_lukmm")
theme_override_styles/hover = SubResource("StyleBoxFlat_16s44")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2xtk5")
text = "Level 1"

[node name="Level2" type="Button" parent="."]
offset_left = 67.0
offset_top = 361.0
offset_right = 388.0
offset_bottom = 469.0
theme_override_fonts/font = ExtResource("2_o6aet")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_xkomv")
theme_override_styles/hover = SubResource("StyleBoxFlat_3njaw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ofns1")
text = "Level 2"

[node name="Level3" type="Button" parent="."]
offset_left = 71.0
offset_top = 558.0
offset_right = 387.0
offset_bottom = 664.0
theme_override_fonts/font = ExtResource("2_o6aet")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_m62pf")
theme_override_styles/hover = SubResource("StyleBoxFlat_7iabl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_iytyf")
text = "Level 3"

[node name="Level4" type="Button" parent="."]
offset_left = 69.0
offset_top = 749.0
offset_right = 408.0
offset_bottom = 861.0
theme_override_fonts/font = ExtResource("2_o6aet")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_opyis")
text = "Level 4"

[node name="Back" type="Button" parent="."]
offset_left = 1681.0
offset_top = 875.0
offset_right = 1917.0
offset_bottom = 984.0
theme_override_fonts/font = ExtResource("2_o6aet")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_y60td")
theme_override_styles/hover = SubResource("StyleBoxFlat_je7dj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4st87")
text = "Back"

[connection signal="pressed" from="Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="Level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
